--- a/style.css
+++ b/style.css
@@ -6,14 +6,16 @@ body {
 .container{
     background-color: #1F2937;
     margin: 115px 145px auto 50px;
+    width: 450px;
 }
 
 h1 {
     color: #ffffff;
-    font-family: Inter;
     font-size: 40px;
-    letter-spacing: 0.025em;
     margin-bottom: 10px;
+    font-family: "Karla";
+    font-weight: 800;
+    line-height: 40px;
 }
 
 #green-h1 {
@@ -22,12 +24,24 @@ h1 {
 
 #sentence {
     color: #D5D4D8;
+    font-size: 20px;
+    font-family: "Inter";
+    font-weight: 300;
+    margin-top: 5px;
 }
 
 button {
     background-color: #10B981;
     color: #ffffff;
+    padding: 10px 20px;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+    border-radius: 6px;
+    border: none;
+    font-family: 'Inter';
+    font-size: 16px;
+    line-height: 24px;
 }
+
 
 hr {
     color: #2F3E53;
@@ -37,11 +51,20 @@ hr {
     margin-bottom: 40px;
 }
 
+.password-container {
+    display: flex;
+    justify-content: space-between;
+}
+
 #password-one, #password-two {
     background-color: #273549;
     color: #55F991;
-    border: 5px solid black;
     margin-bottom: 5px;
-
-    display: inline-block;
+    width: 211px;
+    height: 39px;
+    border-radius: 6px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
