Changed some styling on the input box

--- a/style.css
+++ b/style.css
@@ -75,3 +75,10 @@ hr {
     justify-content: center;
     font-size: 18px;
 }
+
+#password-length {
+    margin-left: 5px;
+    width: 50px;
+    margin-right: 50%;
+
+}
