--- a/style.css
+++ b/style.css
@@ -41,16 +41,23 @@ h1 .heading__color {
     display: inline-block;
 }
 
-button {
-    background-color: #10B981;
+.btn {
+    background-color: rgb(16, 185, 129);
     color: #ffffff;
     padding: 10px 20px;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: 3px 3px 1px rgb(39, 163, 124);
     border-radius: 6px;
     border: none;
     font-family: 'Inter';
     font-size: 16px;
     line-height: 24px;
+
+   
+}
+
+.btn:active {
+    transform: translate(.2rem, .2rem);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
 }
 
 
@@ -97,6 +104,6 @@ hr {
 
 .password-container__button-one,
 .password-container__button-two {
-    margin-bottom: 4px;
+    margin-bottom: 10px;
     padding: 5px 20px;
 }
