--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: inherit;
 }
 
+html {
+    font-size: 10px;
+}
+
 body {
     margin: 0;
     background-color: #1F2937;
@@ -12,17 +16,17 @@ body {
 
 .heading{
     background-color: #1F2937;
-    margin: 115px 145px auto 200px;
-    width: 450px;
+    margin: 11.5rem 14.5rem auto 20rem;
+    width: 45rem;
 }
 
 h1 {
     color: #ffffff;
-    font-size: 40px;
-    margin-bottom: 10px;
+    font-size: 4rem;
+    margin-bottom: 1rem;
     font-family: "Karla";
     font-weight: 800;
-    line-height: 40px;
+    line-height: 4rem;
 }
 
 h1 .heading__color {
@@ -31,10 +35,10 @@ h1 .heading__color {
 
 .heading__sentence-one, .heading__sentence-two {
     color: #D5D4D8;
-    font-size: 20px;
+    font-size: 2rem;
     font-family: "Inter";
     font-weight: 300;
-    margin-top: 5px;
+    margin-top: .5rem;
 }
 
 .heading__sentence-two {
@@ -44,35 +48,35 @@ h1 .heading__color {
 .btn {
     background-color: rgb(16, 185, 129);
     color: #ffffff;
-    padding: 10px 20px;
-    box-shadow: 3px 3px 1px rgb(39, 163, 124);
-    border-radius: 6px;
+    padding: 1rem 2rem;
+    box-shadow: .3rem .3rem .1rem rgb(39, 163, 124);
+    border-radius: .6rem;
     border: none;
     font-family: 'Inter';
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 1.6rem;
+    line-height: 2.4rem;
 
    
 }
 
 .btn:active {
-    transform: translate(.2rem, .2rem);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+    transform: translate(.4rem, .4rem);
+    box-shadow: 0 .1rem .2rem rgba(0, 0, 0, .2);
 }
 
 
 hr {
     color: #2F3E53;
-    border: 1px solid #2F3E53;
+    border: .1rem solid #2F3E53;
 }
 
 .heading__sentence-one, .password-button, hr {
-    margin-bottom: 40px;
+    margin-bottom: 4rem;
 }
 
 .password-button {
-    margin-top: 10px;
-    width: 215px;
+    margin-top: 1rem;
+    width: 21.5rem;
 }
 
 .password-container {
@@ -85,25 +89,25 @@ hr {
 .password-container__two {
     background-color: #273549;
     color: #55F991;
-    margin-bottom: 5px;
-    width: 211px;
-    height: 39px;
-    border-radius: 6px;
+    margin-bottom: .5rem;
+    width: 21.1rem;
+    height: 3.9rem;
+    border-radius: .6rem;
     text-align: center;
-    font-size: 18px;
+    font-size: 1.8rem;
     display: inline-block;
-    padding-top: 10px;
+    padding-top: 1rem;
 }
 
 #password-length {
-    margin-left: 5px;
-    width: 50px;
+    margin-left: .5rem;
+    width: 5rem;
     margin-right: 50%;
 
 }
 
 .password-container__button-one,
 .password-container__button-two {
-    margin-bottom: 10px;
-    padding: 5px 20px;
+    margin-bottom: 1rem;
+    padding: .5rem 2rem;
 }
