--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: inherit;
@@ -74,7 +74,6 @@ h1 .heading__color {
 }
 
 .hidden {
-    display: inline-block;
     color: #55F991;
     background: rgba(255, 255, 255, .3);
     margin-left: 1rem;
@@ -119,6 +118,7 @@ hr {
 .password-container {
     display: flex;
     flex-wrap: wrap;
+    width: 45rem
 }
 
 
