--- a/style.css
+++ b/style.css
@@ -167,34 +167,36 @@ button, .password-container {
 
 
 
-body.light,
-.heading.light {
+body.light 
+.heading, body {
     background: #d0ebff;
 }
 
 
-i.fa-solid.fa-moon.light {
+body.light i.fa-solid.fa-moon {
     background: #4159D4;
     color: #ffffff;
 }
 
-h1.light,
-p.light,
-label.light,
-.password-container > span.light{
+body.light label, h1, 
+.password-container > span{
     color: #1F2937;
 }
 
-h1 > span.light {
+body.light p {
+    color: #1F2937;
+}
+
+body.light h1 > span {
     color: #4159D4;
 }
 
-button.light {
+body.light button {
     background: #314158;
     box-shadow: .3rem .3rem .1rem #394555;
 }
 
-.password-container.light {
+body.light .password-container {
     background: #90ADC3;
 }
 
