--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     margin-top: 15%;
     width: 55rem;
     height: 80vh;
+    min-width: 70rem;
 }
 
 /* Heading */ 
@@ -207,6 +208,9 @@ body.light .password-container > span{
 }
 
 
-
-
-
+/* Media Queries */
+@media only screen and (min-width: 425px) {
+    .root{
+        margin-top: 40%;
+    }
+}
