--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ body.light .password-container > span{
 
 
 /* Media Queries */
-@media only screen and (min-width: 425px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 430px) {
     .root{
         margin-top: 40%;
     }
