--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ body {
 /* Heading */ 
 .heading {
     background-color: #1F2937;
+    display: flex;
+    flex-direction: column;
 }
 
 #toggle-button {
@@ -36,7 +38,7 @@ body {
     padding: 0.6rem;
     border-radius: 50%;
     cursor: pointer;
-    float: right;
+    margin-left: auto;
 }
 
 h1 {
@@ -83,6 +85,7 @@ button {
     padding: 1rem 2rem;
     border-radius: .6rem;
     border: none;
+    width: 50%;
     font-family: 'Inter';
     font-size: 1.8rem;
     line-height: 2.4rem;
