--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
-    padding: 0;
-    box-sizing: inherit;
+    margin: 0;
 }
 
 html {
@@ -8,43 +7,44 @@ html {
 }
 
 body {
-    margin: 0;
+    min-height: 100vh;
     background-color: #1F2937;
-    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .root {
-    margin: auto;
-    margin-top: 15%;
-    width: 55rem;
-    height: 80vh;
-    min-width: 70rem;
+    aspect-ratio: 1 / 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 
 /* Heading */ 
-.heading {
+/* .heading {
     background-color: #1F2937;
     display: flex;
     flex-direction: column;
-}
+} */
 
 #toggle-button {
     background: #4ADF86;
     font-size: 2rem;
-    line-height: 1;
+    line-height: 1.5;
     width: 3rem;
     height: 3rem;
     padding: 0.6rem;
     border-radius: 50%;
     cursor: pointer;
     margin-left: auto;
+    text-align: center;
 }
 
 h1 {
     color: #ffffff;
     font-size: 4rem;
-    margin-bottom: 1rem;
     font-family: "Karla", sans-serif;
     font-weight: 800;
     line-height: 4rem;
@@ -54,7 +54,7 @@ h1 > span {
     color: #4ADF86;
 }
 
-.heading > p {
+p {
     color: #D5D4D8;
     font-size: 2rem;
     font-family: "Inter";
@@ -91,7 +91,6 @@ button {
     line-height: 2.4rem;
     display: inline-block;
     cursor: pointer;
-    margin: 2rem 0;
     transition: background-color 1s;
 }
 
@@ -114,22 +113,19 @@ hr {
 .passwords-container {
     display: flex;
     gap: 1rem;
-    margin-top: 2rem;
 }
 
 .password-container {
     display: flex;
     gap: 1rem;
     justify-content: center;
+    align-items: center;
     background-color: #273549;
     color: #55F991;
-    margin-bottom: .5rem;
-    width: 23em;
-    height: 3.9rem;
     border-radius: .6rem;
-    text-align: center;
     font-size: 1.9rem;
-    padding-top: 1rem;
+    width: 25rem;
+    height: 3.9rem;
 }
 
 .password-container > span {
