--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ hr {
     color: #55F991;
     border-radius: .6rem;
     font-size: 1.9rem;
-    width: 25rem;
+    min-width: 25rem;
     height: 3.9rem;
 }
 
